--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/docker-flask-reverse-string
+    working_directory: ~/docker-flask-ci-test
 
     steps:
       - checkout
