--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,26 +41,15 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
-      # run tests!
-      # this example uses Django's built-in test-runner
-      # other common Python testing frameworks include pytest and nose
-      # https://pytest.org
-      # https://nose.readthedocs.io
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            #python manage.py test
-            #nosetests --verbosity=2 docker-flask-reverse-string
-            pytest manage.py
+
 
       - store_artifacts:
           path: test-reports
           destination: test-reports
 
-  newman-collection-run:
-    executor: newman/postman-newman-docker
-    steps:
-      - checkout
-      - newman/newman-run:
-          collection: ./Misc.postman_collection.json
+      - newman-collection-run:
+          executor: newman/postman-newman-docker
+          steps:
+            - checkout
+            - newman/newman-run:
+                collection: ./Misc.postman_collection.json
